--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,4 +21,6 @@ jobs:
         ado_new_state: 'To DO'
         ado_active_state: 'In Progress'
         ado_close_state: 'Done'
+      ado_area_path: 'optional_area_path\\optional_area_path'
+        
       
