--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ jobs:
         ado_organization: 'emerj-disic'
         ado_project: 'teste'
         ado_wit: 'Task' 
-        ado_new_state: 'To DO'
+        ado_new_state: 'To Do'
         ado_active_state: 'In Progress'
         ado_close_state: 'Done'
        ado_area_path: 'optional_area_path\\optional_area_path'
