--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,10 +17,10 @@ jobs:
         github_token: '${{ secrets.GH_TOKEN }}'    
         ado_organization: 'emerj-disic'
         ado_project: 'teste'
-        ado_wit: 'Task' 
-        ado_new_state: 'To Do'
-        ado_active_state: 'In Progress'
-        ado_close_state: 'Done'
+        ado_wit: 'Pull Request' 
+        ado_new_state: 'New'
+        ado_active_state: 'Active'
+        ado_close_state: 'Closed'
        
         
       
